# crypnotes-android

./: .gitattributes  .gitignore  Cargo.toml  CrypNotes-Android-v1-Functional-Requirements.md  CrypNotes-Android-v1-Implementation-Plan.md  CrypNotes-Android-v1-Product-Spec.md  CrypNotes-Android-v1-Room-database-schema.md  CrypNotes-Android-v1-Security-NFR.md  Makefile
.github/workflows/: rust-quality.yml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/core/bridge/: build.gradle.kts
android/core/bridge/src/main/: AndroidManifest.xml
android/core/data/: build.gradle.kts
android/core/data/src/main/: AndroidManifest.xml
android/core/platform/media/: build.gradle.kts
android/core/platform/media/src/main/: AndroidManifest.xml
android/core/platform/notifications/: build.gradle.kts
android/core/platform/notifications/src/main/: AndroidManifest.xml
android/core/platform/security/: build.gradle.kts
android/core/ui/: build.gradle.kts
android/core/ui/src/main/: AndroidManifest.xml
android/feature/labels/: build.gradle.kts  consumer-rules.pro
android/feature/labels/src/main/: AndroidManifest.xml
android/feature/notes/: build.gradle.kts  proguard-rules.pro
android/feature/notes/src/main/: AndroidManifest.xml
android/feature/reminders/: build.gradle.kts
android/feature/reminders/src/main/: AndroidManifest.xml
android/feature/settings/: build.gradle.kts
android/feature/settings/src/main/: AndroidManifest.xml
android/feature/vault/: build.gradle.kts
android/feature/vault/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
crates/crypnotes-crypto/: Cargo.toml
crates/crypnotes-crypto/src/: lib.rs
crates/crypnotes-doc/: Cargo.toml
crates/crypnotes-doc/src/: lib.rs
crates/crypnotes-ffi/: Cargo.toml
crates/crypnotes-ffi/src/: crypnotes.udl  lib.rs
crates/crypnotes-ids/: Cargo.toml
crates/crypnotes-ids/src/: lib.rs
crates/crypnotes-lifecycle/: Cargo.toml
crates/crypnotes-lifecycle/src/: lib.rs
crates/crypnotes-reminders/: Cargo.toml
crates/crypnotes-reminders/src/: lib.rs
crates/crypnotes-versioning/: Cargo.toml
crates/crypnotes-versioning/src/: lib.rs
scripts/: generate-kotlin-bindings.ps1  rust-quality-gates.ps1
(+21 files in other folders)
