[workspace]
members = [
  "crates/crypnotes-ids",
  "crates/crypnotes-crypto",
  "crates/crypnotes-doc",
  "crates/crypnotes-reminders",
  "crates/crypnotes-lifecycle",
  "crates/crypnotes-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Proprietary"
authors = ["Aimil Arif"]

[workspace.dependencies]
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
proptest = "1.5"
rand_core = "0.6"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
uniffi = { version = "0.29", features = ["build", "cli"] }
uuid = { version = "1", features = ["serde", "v7"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
