[package]
name = "crypnotes-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crypnotes-versioning = { path = "../crypnotes-versioning" }
argon2.workspace = true
chacha20poly1305.workspace = true
rand_core.workspace = true
secrecy.workspace = true
thiserror.workspace = true
zeroize.workspace = true
